Fix wrong test functions